--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -21,6 +21,9 @@ $hero-transparency: 0.6;
 //General Colours
 $color-grey-light-1: rgb(231, 231, 231);
 $color-grey-dark: #777;
+$color-grey-dark-2: #999;
+$color-grey-dark-3: #333;
+
 $color-white: #FFF;
 $color-black: #000;
 
