--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -7,21 +7,104 @@
     &__input{
         font-size: 1.5rem;
         font-family: inherit;
+        color: inherit;
         padding: 1.5rem 2rem;
+        border:none;
         border-radius: 2px;
         background-color: rgba($color-white, 0.5);
-        border: none;
-    }
+        border-bottom: 3px solid transparent;
+        width: 90%;
+        display: block;
+        transition: all 0.5s;
+        
+        &::-webkit-input-placeholder,
+        &::-moz-input-placeholder {
+            color: $color-grey-dark-2;
+            color: $color-tertiary;
+            font-size: 2.8rem;
 
-    &__input:focus{
-        outline: none;
-        box-shadow: 0 1rem 2rem rgba($color-black, 0.8);
-        border-bottom: $color-primary;
-    }
+        }
+        &:focus{
+            outline: none;
+            box-shadow: 0 1rem 2rem rgba($color-black, 0.1);
+            border-bottom: 3px solid $color-primary;
+        }
 
+        &:focus:invalid {
+            border:none;
+            border-bottom: 3px solid $color-secondary;
+            color: $color-secondary;
+        }
+
+        // &:focus:valid{
+        //     border: none;
+        //     border-bottom: 3px solid $color-primary;
+        //     color: $color-primary;
+        // }
+
+        &:-moz-ui-invalid {
+            box-shadow: none;
+        }
+    }
+    
     &__label {
+        font-size: 1.2rem;
+        font-weight: 700;
+        margin-left: 2rem;
+        margin-top: 0.7rem;
+        display:block;
+        transition: all 0.3s;
     }
 
-    &__group {
+    &__input:placeholder-shown + &__label {
+        opacity: 0;
+        visibility: hidden;
+        transform: translateY(-4rem);
+    }
+
+    &__radio-group {
+        width: 49%;
+        display: inline-block;
+        position: relative;
+    }
+
+    &__radio-input{
+        display: none;
+    }
+
+    &__radio-label {
+        font-size: $font-size-default;
+        cursor: pointer;
+        //position: relative;
+        padding-left: 5rem;
+    }
+
+    &__radio-button {
+        height: 3rem;
+        width: 3rem;
+        border: 4px solid $color-primary;
+        border-radius: 50%;
+        display: inline-block;
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        &::after {
+            content: "";
+            display:block;
+            height: 1.4rem;
+            width: 1.4rem;
+            border-radius: 50%;
+            background-color: $color-primary;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            opacity: 0;
+            transition: opacity 0.2s;
+        }
+    }
+    &__radio-input:checked  + &__radio-label &__radio-button::after{
+        opacity: 1;
     }
 }
