--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,7 +15,9 @@
 @import "components/form";
 @import "components/story.scss";
 
+@import "layout/footer";
 @import "layout/grid";
+@import "layout/navigation";
 @import "layout/header";
 
 @import "pages/home";
