--- a/css/style.css
+++ b/css/style.css
@@ -565,7 +565,9 @@ body {
   right: 6rem;
   border-radius: 50%;
   z-index: 2000;
-  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1); }
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
+  text-align: center;
+  cursor: button; }
 
 .navigation__background {
   height: 6rem;
@@ -588,6 +590,7 @@ body {
   opacity: 0;
   width: 0;
   height: 0;
+  transform: scale(0);
   transition: all 0.8s cubic-bezier(0.67, 0.89, 0.87, 0.31); }
 
 .navigation__list {
@@ -627,7 +630,43 @@ body {
 .navigation__checkbox:checked ~ .navigation__nav {
   opacity: 1;
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  transform: scale(1); }
+
+.navigation__icon {
+  position: relative;
+  margin-top: 3.4rem; }
+  .navigation__icon, .navigation__icon::before, .navigation__icon::after {
+    width: 3rem;
+    height: 2px;
+    background-color: #333;
+    display: inline-block;
+    transition: all 0.4s; }
+  .navigation__icon::before, .navigation__icon::after {
+    content: "";
+    position: absolute;
+    left: 0; }
+  .navigation__icon::before {
+    top: -1rem; }
+  .navigation__icon::after {
+    top: 1rem; }
+
+.navigation__button:hover .navigation__icon::before {
+  top: -0.8rem; }
+
+.navigation__button:hover .navigation__icon::after {
+  top: 0.8rem; }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon {
+  background-color: transparent; }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon:before {
+  transform: rotate(135deg);
+  top: 0; }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon:after {
+  transform: rotate(-135deg);
+  top: 0; }
 
 .header {
   height: 98vh;
@@ -652,6 +691,75 @@ body {
     transform: translate(-50%, -50%);
     text-align: center; }
 
+.popup {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 5000;
+  opacity: 0;
+  visibility: hidden; }
+  .popup:target {
+    opacity: 1;
+    visibility: visible; }
+  .popup:target .popup__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1); }
+  .popup__close:link, .popup__close:visited {
+    color: #777;
+    position: absolute;
+    top: 2.0rem;
+    right: 2.5rem;
+    font-size: 5rem;
+    text-decoration: none;
+    display: inline-block;
+    transition: all .2s;
+    line-height: 1; }
+  .popup__close :hover {
+    color: #0ba03d; }
+  .popup__content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 75%;
+    background-color: #FFF;
+    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
+    border-radius: 1.5rem;
+    display: table;
+    overflow: hidden;
+    opacity: 0;
+    transform: translate -50%, -50% scale(0.5);
+    transition: all 0.10s .1s; }
+  .popup__left {
+    width: 33.333333%;
+    display: table-cell; }
+  .popup__img {
+    width: 100%;
+    height: 50%;
+    object-fit: cover; }
+  .popup__right {
+    width: 66.666667%;
+    display: table-cell;
+    vertical-align: middle;
+    padding: 3rem 5rem; }
+  .popup__text {
+    font-size: 1.4rem;
+    margin-bottom: 4rem;
+    -moz-column-count: 2;
+    -moz-column-gap: 4rem;
+    -moz-column-rule: 1px #999;
+    column-count: 2;
+    column-gap: 4rem;
+    column-rule: 1px #999;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto; }
+
 .section-about {
   padding: 5rem 0 15rem 0;
   background-color: #e6f6e4;
@@ -664,7 +772,7 @@ body {
   background-size: cover;
   background-position: top;
   border-radius: 3.5rem;
-  background-image: linear-gradient(to bottom right, rgba(255, 0, 0, 0.6), rgba(11, 160, 61, 0.6)), url(../img/BB_outdoors02.jpg); }
+  background-image: url(../img/features-background.jpg); }
 
 .section-best {
   padding: 5rem 0 7rem 0;
