--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -13,5 +13,8 @@ body{
 // Root font size for responiveness
 html{
     font-size: 62.5%; // Default 10px;
-    //font-size: 31.5%;
+
+    @include respond-phone {
+        font-size: 50%;
+    }
 }
