--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -14,7 +14,10 @@ body{
 html{
     font-size: 62.5%; // Default 10px;
 
-    @include respond-phone {
+    // @include respond-phone {
+    //     font-size: 50%;
+    // }
+    @include respond(phone) {
         font-size: 50%;
     }
 }
