--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -14,10 +14,16 @@ body{
 html{
     font-size: 62.5%; // Default 10px;
 
-    // @include respond-phone {
-    //     font-size: 50%;
-    // }
     @include respond(phone) {
         font-size: 50%;
+    }
+    @include respond(tab-port) {
+        font-size: 60%;
+    }
+    @include respond(tab-land) {
+        font-size: 70%;
+    }
+    @include respond(big-desktop) {
+        font-size: 120%;
     }
 }
