--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -35,21 +35,25 @@ $breakpoint argument choices:
 */
 
 @mixin respond($breakpoint) {
-    
+
     @if $breakpoint == phone {
-        @media (max-width: 600px) { @content };
+        //600px/16px = 37.5em
+        @media (max-width: 37.5em) { @content };
     }
 
     @if $breakpoint == tab-port {
-        @media (max-width: 900px) { @content };
+        //900px/16px = 56.25.5em
+        @media (max-width: 90rem) { @content };
     }
 
     @if $breakpoint == tab-land {
-        @media (max-width: 1200px) { @content };
+        //1200px/16px = 37.5em
+        @media (max-width: 75rem) { @content };
     }
 
     @if $breakpoint == big-desktop {
-        @media (min-width: 1800px) { @content };
+        //1800px/16px = 112.5em
+        @media (min-width: 180rem) { @content };
     }
 
 }
