--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,28 +6,34 @@
     padding: 0;
     box-sizing: inherit;
 }
-body{
-    box-sizing: border-box;
-}
 
 // Root font size for responiveness
 html{
     font-size: 62.5%; // Our default: 1 rem = 10px;
 
-    @include respond(phone) {
-        // 1 rem = 5px, 5/16= 31.25%
-        font-size: 31.25%;
-    }
-    @include respond(tab-port) {
-        // 1 rem = 8px, 8/16= 50%
-        font-size: 50%;
-    }
+  
     @include respond(tab-land) {
         // 1 rem = 9px, 9/16= 56.25%
         font-size: 56.25%;
     }
+
+    @include respond(tab-port) {
+        // 1 rem = 8px, 8/16= 50%
+        font-size: 50%;
+    }
+
     @include respond(big-desktop) {
         // 1 rem = 12px, 12/16= 75% (scaling up)
         font-size: 75%;
+    }
+}
+
+body{
+    box-sizing: border-box;
+
+    padding: 3rem;
+    @include respond(tab-port) {
+        // 1 rem = 8px, 8/16= 50%
+        padding: 0;
     }
 }
