--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,7 +3,6 @@ body {
     font-weight: 400;
     line-height: 1.7;
     color: $color-grey-dark;
-    padding: 3rem;
 }
 
 .heading-primary{
@@ -21,6 +20,11 @@ body {
     
         backface-visibility: hidden;
         animation-duration: 3s;
+
+        @include respond(phone) {
+            letter-spacing: 1rem;
+            font-family: 5rem;
+        }
 
         &--1{
             animation-name: fadeInLeft;
@@ -57,6 +61,13 @@ body {
     color: transparent;
     letter-spacing: 0.2rem;
     transition: all .2s;
+
+    @include respond(tab-port) {
+        font-size: 3rem;
+    }
+    @include respond(phone) {
+        font-size: 2.5rem;
+    }
 
     &:hover {
         transform: scale(1.02);
