--- a/css/style.css
+++ b/css/style.css
@@ -526,10 +526,17 @@ body {
 .footer {
   background-color: #333;
   padding: 10rem 0;
-  font-size: 1.4rem; }
+  font-size: 1.4rem;
+  color: #e7e7e7; }
+  @media (max-width: 56.25em) {
+    .footer {
+      padding: 8rem 0; } }
   .footer__logo-box {
     text-align: center;
     margin-bottom: 8rem; }
+    @media (max-width: 56.25em) {
+      .footer__logo-box {
+        margin-bottom: 5rem; } }
   .footer__logo {
     width: 35rem;
     height: auto;
@@ -538,6 +545,10 @@ body {
     border-top: 1px solid #777;
     padding-top: 2rem;
     display: inline-block; }
+    @media (max-width: 56.25em) {
+      .footer__navigation {
+        width: 100%;
+        text-align: center; } }
   .footer__list {
     list-style: none; }
   .footer__item {
@@ -561,6 +572,11 @@ body {
     padding-top: 2rem;
     width: 80%;
     float: right; }
+    @media (max-width: 56.25em) {
+      .footer__copyright {
+        width: 100%;
+        text-align: center;
+        float: none; } }
 
 .row {
   max-width: 114rem;
@@ -572,7 +588,8 @@ body {
         margin-bottom: 6rem; } }
   @media (max-width: 56.25em) {
     .row {
-      max-width: 50rem; } }
+      max-width: 50rem;
+      padding: 0 5rem; } }
   .row::after {
     content: "";
     display: table;
@@ -737,6 +754,9 @@ body {
   background-position: center;
   position: relative;
   border-radius: 3.5rem; }
+  @media (max-width: 56.25em) {
+    .header {
+      margin-bottom: 2rem; } }
   .header__logo-box {
     position: absolute;
     top: 4rem;
@@ -824,6 +844,10 @@ body {
   background-color: #e6f6e4;
   margin-bottom: 15rem;
   border-radius: 3.5rem; }
+  @media (max-width: 56.25em) {
+    .section-about {
+      padding: 5rem 0;
+      margin-bottom: 2rem; } }
 
 .section-features {
   padding: 8rem 0 8rem 0;
@@ -832,23 +856,39 @@ body {
   background-position: top;
   border-radius: 3.5rem;
   background-image: url(../img/features-background.jpg); }
+  @media (max-width: 56.25em) {
+    .section-features {
+      padding: 5rem 0;
+      margin-bottom: 2rem; } }
 
 .section-best {
   padding: 5rem 0 7rem 0;
   margin-bottom: 15rem;
   background-color: #e6f6e4;
   border-radius: 3.5rem; }
+  @media (max-width: 56.25em) {
+    .section-best {
+      padding: 5rem 0;
+      margin-bottom: 2rem; } }
 
 .section-stories {
   padding: 5rem 0;
   margin-bottom: 15rem;
   border-radius: 3.5rem;
   position: relative; }
+  @media (max-width: 56.25em) {
+    .section-stories {
+      padding: 5rem 0;
+      margin-bottom: 2rem; } }
 
 .section-book {
   padding: 5rem 0 15rem 0;
   margin-bottom: 15rem;
   border-radius: 3.5rem; }
+  @media (max-width: 56.25em) {
+    .section-book {
+      padding: 5rem 0;
+      margin-bottom: 2rem; } }
 
 .book {
   background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9), 55%, transparent 60%), url(../img/card-mama.jpg);
