--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -33,6 +33,7 @@ $color-background-margin: $color-white;
 $color-background-sections: rgb(230, 246, 228);
 $color-background-sections-alternate: darken($color-background-sections, 10%);
 $margin-section-floor: 15rem;
+$margin-section-floor-small: 2rem;
 
 $border-radius-large: 3.5rem;
 $border-radius-medium: 2.5rem;
