--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -3,6 +3,12 @@
     background-color: $color-background-sections;
     margin-bottom: $margin-section-floor;
     border-radius: $border-radius-large;
+
+    @include respond(tab-port){
+        padding: 5rem 0;
+        margin-bottom: $margin-section-floor-small;
+    }
+
 }
 
 .section-features {
@@ -12,6 +18,11 @@
     background-position: top;
     border-radius: $border-radius-large;
     background-image: url(../img/features-background.jpg);
+
+    @include respond(tab-port){
+        padding: 5rem 0;
+        margin-bottom: $margin-section-floor-small;
+    }
 }
 
 .section-best {
@@ -20,6 +31,11 @@
     background-color: $color-background-sections;
     //background-image: linear-gradient(to bottom right, rgba($color-grad-topleft, $hero-transparency), rgba($color-grad-bottomright, $hero-transparency));
     border-radius: $border-radius-large;
+
+    @include respond(tab-port){
+        padding: 5rem 0;
+        margin-bottom: $margin-section-floor-small;
+    }
 }
 
 .section-stories {
@@ -29,17 +45,22 @@
     border-radius: $border-radius-large;
     position: relative; //for video background.
 
+    @include respond(tab-port){
+        padding: 5rem 0;
+        margin-bottom: $margin-section-floor-small;
+    }
+
 }
 
 .section-book {
     padding: 5rem 0 15rem 0;
-    // background-image: linear-gradient(
-    //     to bottom right,
-    //     rgba($color-grad-topleft, $hero-transparency),
-    //     rgba($color-grad-bottomright, $hero-transparency)
-    // );
     margin-bottom: $margin-section-floor;
     border-radius: $border-radius-large;
+    
+    @include respond(tab-port){
+        padding: 5rem 0;
+        margin-bottom: $margin-section-floor-small;
+    }
 }
 
 .book {
