--- a/css/style.css
+++ b/css/style.css
@@ -353,7 +353,11 @@ body {
   @media (max-width: 56.25em) {
     .card {
       height: auto;
-      box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.25); }
+      box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.25);
+      width: 100%; }
+      .card__heading-span {
+        hyphens: auto;
+        padding: 0.5rem; }
       .card__side {
         height: auto;
         background-color: #FFF;
@@ -361,17 +365,19 @@ body {
         .card__side--front {
           border-bottom-left-radius: 0;
           border-bottom-right-radius: 0;
-          padding-bottom: 4rem;
+          padding-bottom: 6rem;
           box-shadow: none; }
         .card__side--back {
           transform: rotateY(0);
           border-top-left-radius: 0;
           border-top-right-radius: 0;
           clip-path: polygon(0% 10%, 100% 0%, 100% 100%, 0% 100%);
-          margin-top: -10%;
+          margin-top: -20%;
           padding-top: 4rem; }
       .card:hover .card__side--front {
         transform: rotateY(0); }
+      .card__details {
+        padding: 3rem; }
       .card__cta {
         position: relative;
         top: 0%;
@@ -653,6 +659,10 @@ body {
     .row {
       max-width: 50rem;
       padding: 0 5rem; } }
+  @media (max-width: 37.5em) {
+    .row {
+      width: 100%;
+      padding: 0.5rem; } }
   .row::after {
     content: "";
     display: table;
