--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -163,10 +163,14 @@
     }
 
     @include respond(tab-port) {
-         height: auto;
-         box-shadow: 0 2.5rem 4rem rgba($color-black, .25);
+        height: auto;
+        box-shadow: 0 2.5rem 4rem rgba($color-black, .25);
+        width: 100%;
             
-         
+        &__heading-span {
+            hyphens: auto;
+            padding: 0.5rem;
+        }     
         
         &__side {
             height: auto;
@@ -176,7 +180,7 @@
             &--front {
                 border-bottom-left-radius: 0;
                 border-bottom-right-radius: 0;
-                padding-bottom: 4rem;
+                padding-bottom: 6rem;
                 box-shadow: none;
             }
 
@@ -185,7 +189,7 @@
                 border-top-left-radius: 0;
                 border-top-right-radius: 0;
                 clip-path: polygon(0% 10%, 100% 0%, 100% 100%, 0% 100%);
-                margin-top: -10%;
+                margin-top: -20%;
                 padding-top: 4rem;
             }
 
@@ -193,6 +197,10 @@
     
         &:hover &__side--front {
             transform: rotateY(0);
+        }
+
+        &__details {
+            padding: 3rem;
         }
     
         //front side styling
