--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -14,6 +14,10 @@
         max-width: 50rem;
         padding: 0 5rem;
     }
+    @include respond(phone) {
+        width: 100%;
+        padding: 0.5rem;
+    }
     @include clearfix;
 
     [class^="col-"] {
