--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -165,7 +165,9 @@
     @include respond(tab-port) {
         height: auto;
         box-shadow: 0 2.5rem 4rem rgba($color-black, .25);
-        width: 100%;
+        max-width: 60rem;
+        margin-left: auto;
+        margin-right: auto;
             
         &__heading-span {
             hyphens: auto;
@@ -220,7 +222,7 @@
         }
     
         &__price-value {
-            font-size: 6rem;
+            font-size: 4rem;
         }
     }
 }
