--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -8,8 +8,10 @@
     height: 45rem;
 
     @include respond(tab-port){
+        max-width: 60rem;
+        margin-left: auto;
+        margin-right: auto;
         padding: 2rem;
-
     }
 
     &__icon {
