--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -5,7 +5,8 @@
     border-radius: $border-radius-large;
 
     @include respond(tab-port){
-        padding: 5rem 0;
+        padding: 5rem 2rem;
+        padding-bottom: 10rem;
         margin-bottom: $margin-section-floor-small;
     }
 
@@ -61,6 +62,7 @@
         padding: 5rem 0;
         margin-bottom: $margin-section-floor-small;
     }
+    @include respondMaxPX(800){ padding: 1rem 0; }
 }
 
 .book {
@@ -71,11 +73,13 @@
         transparent 60%)
         , url(../img/card-mama.jpg);
     background-size: 100%;
+    background-repeat: no-repeat;
     border-radius: $border-radius-small;
     box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
     
-    // width: 80%;
-    // height: 50rem;
+    @include respondMinPX (750) {
+        padding: 1rem;
+    }
 
     &__form {
         width: 50%;
