--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -10,6 +10,7 @@
         transition: all .2s;
         position: relative;
         font-size: 2rem;
+        @include respondMaxPX (750) { font-size: 1.5rem; }
 
 
         //Charnge for the button element
