--- a/css/style.css
+++ b/css/style.css
@@ -912,6 +912,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    max-height: 95%;
     width: 75%;
     background-color: #FFF;
     box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
@@ -921,17 +922,54 @@ body {
     opacity: 0;
     transform: translate -50%, -50% scale(0.5);
     transition: all 0.130s .1s; }
+    @media (max-width: 87.5em) {
+      .popup__content {
+        display: block;
+        float: left;
+        padding: 9rem 2% 5% 2%; } }
+    @media (max-width: 68.75em) {
+      .popup__content {
+        width: 85%; } }
+    @media (max-width: 56.25em) {
+      .popup__content {
+        width: 90%; } }
+    @media (max-width: 37.5em) {
+      .popup__content {
+        width: 95%; } }
+    @media (max-width: 25em) {
+      .popup__content {
+        width: 99%;
+        padding: 7rem 1% 2% 1%; } }
   .popup__left {
     width: 33.333333%;
     display: table-cell; }
+    @media (max-width: 87.5em) {
+      .popup__left {
+        display: block;
+        float: left;
+        width: 100%; } }
   .popup__img {
     width: 100%;
     object-fit: cover; }
+    @media (max-width: 87.5em) {
+      .popup__img {
+        display: block;
+        float: left;
+        height: 20%;
+        width: 50%; } }
   .popup__right {
     width: 66.666667%;
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem; }
+    @media (max-width: 87.5em) {
+      .popup__right {
+        display: block;
+        float: left;
+        width: 100%; } }
+    @media (max-width: 25em) {
+      .popup__right {
+        padding: 1rem; } }
   .popup__text {
     font-size: 1.4rem;
     margin-bottom: 4rem;
@@ -945,6 +983,9 @@ body {
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto; }
+    @media (max-width: 37.5em) {
+      .popup__text {
+        column-count: 1; } }
 
 .section-about {
   padding: 5rem 0 15rem 0;
