--- a/sass/layout/_popup.scss
+++ b/sass/layout/_popup.scss
@@ -32,6 +32,7 @@
             display: inline-block;
             transition: all .2s;
             line-height: 1;
+          
         }
 
         :hover {
@@ -41,7 +42,7 @@
         
     &__content{
         @include absCentre;
-
+        max-height: 95%;
         width: 75%;
         background-color: $color-white;
         box-shadow: 0 2rem 4rem rgba($color-black, 0.2);
@@ -51,16 +52,39 @@
         opacity: 0;
         transform: translate (-50%, -50%) scale(0.5);
         transition: all 0.130s .1s;
+        @include respondMaxPX (1400) {
+            display: block;
+            float: left;
+            padding: 9rem 2% 5% 2%;
+        };
+        @include respondMaxPX (1100) { width: 85%; }
+        @include respondMaxPX (900) { width: 90%; }
+        @include respondMaxPX (600) { width: 95%; }
+        @include respondMaxPX (400) {
+            width: 99%;
+            padding: 7rem 1% 2% 1%;
+        };
     }
 
     &__left{
         width: 33.333333%;
         display:table-cell;
+        @include respondMaxPX (1400) {
+            display: block;
+            float: left;
+            width: 100%;
+        };
     }
 
     &__img {
         width:100%;
         object-fit: cover;
+        @include respondMaxPX (1400) {
+            display: block;
+            float: left;
+            height: 20%;
+            width: 50%;
+        };
     }
 
     &__right{
@@ -68,6 +92,12 @@
         display:table-cell;
         vertical-align: middle;
         padding: 3rem 5rem;
+        @include respondMaxPX (1400) {
+            display: block;
+            float: left;
+            width: 100%;
+        };
+        @include respondMaxPX (400) { padding: 1rem; };
     }
 
     &__text{
@@ -79,6 +109,7 @@
         -moz-column-rule: 1px $color-grey-dark-2;
 
         column-count: 2;
+        @include respondMaxPX (600) { column-count: 1; };
         column-gap: 4rem;
         column-rule: 1px $color-grey-dark-2;
         
