--- a/css/style.css
+++ b/css/style.css
@@ -746,8 +746,20 @@ body {
   cursor: button; }
   @media (max-width: 56.25em) {
     .navigation__button {
-      top: 4rem;
-      right: 4rem; } }
+      height: 6rem;
+      width: 6rem; } }
+  @media (max-width: 37.5em) {
+    .navigation__button {
+      height: 4rem;
+      width: 4rem; } }
+  @media (max-width: 56.25em) {
+    .navigation__button {
+      top: 3rem;
+      right: 3rem; } }
+  @media (max-width: 37.5em) {
+    .navigation__button {
+      top: 2rem;
+      right: 2rem; } }
 
 .navigation__background {
   height: 6rem;
@@ -761,8 +773,20 @@ body {
   transition: transform 0.8s cubic-bezier(0.67, 0.89, 0.87, 0.31); }
   @media (max-width: 56.25em) {
     .navigation__background {
-      top: 4.5rem;
-      right: 4.5rem; } }
+      height: 5rem;
+      width: 5rem; } }
+  @media (max-width: 37.5em) {
+    .navigation__background {
+      height: 3rem;
+      width: 3rem; } }
+  @media (max-width: 56.25em) {
+    .navigation__background {
+      top: 3.5rem;
+      right: 3.5rem; } }
+  @media (max-width: 37.5em) {
+    .navigation__background {
+      top: 2.5rem;
+      right: 2.5rem; } }
 
 .navigation__nav {
   height: 100vh;
@@ -820,6 +844,12 @@ body {
 .navigation__icon {
   position: relative;
   margin-top: 3.8rem; }
+  @media (max-width: 56.25em) {
+    .navigation__icon {
+      margin-top: 2.8rem; } }
+  @media (max-width: 37.5em) {
+    .navigation__icon {
+      margin-top: 1.9rem; } }
   .navigation__icon, .navigation__icon::before, .navigation__icon::after {
     width: 3rem;
     height: 2px;
@@ -868,9 +898,23 @@ body {
     position: absolute;
     top: 4rem;
     left: 4rem; }
+    @media (max-width: 56.25em) {
+      .header__logo-box {
+        top: 3rem;
+        left: 3rem; } }
+    @media (max-width: 37.5em) {
+      .header__logo-box {
+        top: 2rem;
+        left: 2rem; } }
   .header__logo {
     height: 8rem;
     border-radius: 50%; }
+    @media (max-width: 56.25em) {
+      .header__logo {
+        height: 7rem; } }
+    @media (max-width: 37.5em) {
+      .header__logo {
+        height: 6rem; } }
   .header__text-box {
     position: absolute;
     top: 50%;
